k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: developer-portal
  namespace: serviceradar-developer
spec:
  selector:
    app: developer-portal
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
